# coan

./: AUTHORS  ChangeLog  Doxyfile  LICENSE.BSD  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
man/: Makefile.am  Makefile.in  man_pod.pl
man/html/: coan_man_1.html
python/: coanlib.py
src/: Makefile.am  Makefile.in  argument_list.cpp  argument_list.h  canonical.cpp  canonical.h  chew.cpp  chew.h  citable.cpp  citable.h  cloner.h  configure.h  contradiction.cpp  contradiction.h  dataset.cpp  dataset.h  diagnostic.cpp  diagnostic.h  directive.cpp  directive.h  directive_type.h  directory.h  directory_common.cpp  directory_common.h  directory_nix.h  directory_win.h  eol.h  evaluation.h  expansion_base.cpp  expansion_base.h  explained_expansion.cpp  explained_expansion.h  expression_parser.cpp  expression_parser.h  file_tree.cpp  file_tree.h  filesys.cpp  filesys.h  formal_parameter_list.cpp  formal_parameter_list.h  (+47 more)
test_coan/: Makefile.am  Makefile.in  README  class_TestCase.py  coan_bulk_tester.py  coan_case_tester.py  coan_softlink_tester.py  coan_spin_tester.py  coan_symbol_rewind_tester.py  coan_test_metrics.py  scrap_dir_tree.py  wordsize.cpp
test_coan/test_cases/: test0001.c  test0001.c.expect  test0002.c  test0002.c.expect  test0003.c  test0003.c.expect  test0004.c  test0004.c.expect  test0005.c  test0005.c.expect  test0006.c  test0006.c.expect  test0007.c  test0007.c.expect  test0008.c  test0008.c.expect  test0009.c  test0009.c.expect  test0010.c  test0011.c  test0012.c  test0012.c.expect  test0013.c  test0014.c  test0014.c.expect  test0015.c  test0015.c.expect  test0016.c  test0016.c.expect  test0017.c  test0017.c.expect  test0018.c  test0019.c  test0020.c  test0021.c  test0022.c  test0023.c  test0024.c  test0025.c  test0026.c  (+725 more)
test_coan/test_cases/altfiles/: test0168-1.c  test0168-2.c  test0429-1.c  test0429-2.c  test0430-2.c
