bin_PROGRAMS = coan

# set the include path found by configure
AM_CPPFLAGS = $(all_includes)

# the library search path.
coan_LDFLAGS = $(all_libraries) 
coan_SOURCES = \
	argument_list.cpp \
	canonical.cpp \
	chew.cpp \
	citable.cpp \
	contradiction.cpp \
	dataset.cpp \
	diagnostic.cpp \
	directive.cpp \
	directory_common.cpp \
	expansion_base.cpp \
	explained_expansion.cpp \
	expression_parser.cpp \
	filesys.cpp \
	file_tree.cpp \
	formal_parameter_list.cpp \
	fs_nix.cpp \
	fs_win.cpp \
	get_options.cpp \
	hash_include.cpp \
	help.cpp \
	identifier.cpp \
	if_control.cpp \
	integer_constant.cpp \
	integer.cpp \
	io.cpp \
	line_despatch.cpp \
	main.cpp \
	options.cpp \
	parameter_list_base.cpp \
	parameter_substitution.cpp \
	parsed_line.cpp \
	reference.cpp \
	symbol.cpp \
	syserr.cpp \
	unexplained_expansion.cpp \
	version.cpp
 
noinst_HEADERS = \
	argument_list.h \
	canonical.h \
	chew.h \
	citable.h \
	cloner.h \
	configure.h \
	contradiction.h \
	dataset.h \
	diagnostic.h \
	directive.h \
	directive_type.h \
	directory_common.h \
	directory.h \
	directory_nix.h \
	directory_win.h \
	eol.h \
	evaluation.h \
	expansion_base.h \
	explained_expansion.h \
	expression_parser.h \
	filesys.h \
	file_tree.h \
	formal_parameter_list.h \
	get_options.h \
	hash_include.h \
	help.h \
	identifier.h \
	if_control.h \
	integer_constant.h \
	integer.h \
	io.h \
	lexicon.h \
	line_despatch.h \
	line_type.h \
	options.h \
	parameter_list_base.h \
	parameter_substitution.h \
	parse_buffer.h \
	parsed_line.h \
	path.h \
	platform.h \
	prohibit.h \
	reference_cache.h \
	reference.h \
	symbol.h \
	syserr.h \
	traits.h \
	unexplained_expansion.h \
	version.h

